add bg-img in home pages

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
         <!-- Navbar End -->
 
         <!-- HOME START-->
-        <section class="bg-home-1" style="background-image:url('images/bg-1.jpg')" id="home">
+        <section class="bg-home-1" style="background-image:url('images/bg-1.png')" id="home">
             <div class="bg-overlay"></div>
             <div class="home-center">
                 <div class="home-desc-center">
